<resources>
    <string name="app_name">国韵华风</string>
    <string name="title_classics">国学殿堂</string>
    <string name="nav_classics">国学</string>
    <string name="nav_festivals">节日</string>
    <string name="nav_paintings">国画</string>
    <string name="nav_opera">京剧</string>
    <string name="title_festivals">华夏风韵</string>
    <string name="desc_festival_icon">节日图标</string>
    <string name="paintings_title">丹青妙境</string>
    <string name="painting_image_desc">中国传统绘画作品</string>
    <string name="opera_title">梨园霓裳</string>
    <string name="opera_mask_desc">京剧脸谱</string>
    <string name="play_aria">播放唱段</string>
    <string name="story_summary">故事梗概</string>
    <string name="famous_aria">名段欣赏</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="mask_meaning">脸谱寓意</string>
    <string name="search_opera">搜索京剧</string>
    <string name="painting_artist">画家</string>
    <string name="painting_dynasty">朝代</string>
    <string name="painting_description">作品简介</string>
    <string name="painting_slide_desc">绘画作品细节</string>
    <string name="festival_origin">节日起源</string>
    <string name="festival_customs">节日习俗</string>
    <string name="action_settings">设置</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="search_no_results">无结果</string>
</resources>
